<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/bg_orange"
    tools:context=".WiFi_Scanner_Home" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="205dp"
        android:layout_height="114dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/icon"
        app:srcCompat="@drawable/icon_scanwifi" />

    <TextView
        android:id="@+id/appname"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.CardView
        android:id="@+id/start"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>